# CrossWave

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.bat  build.ps1
include/: audio_capture.h  audio_device_enum.h  audio_output.h  dsp_engine.h  fft_processor.h  noise_profile.h  thread_safe_queue.h
src/: audio_capture.cpp  audio_device_enum.cpp  audio_output.cpp  dsp_engine.cpp  fft_processor.cpp  main.cpp  noise_profile.cpp  ui_interface.cpp
